Bug 776401 Part 1: Avoid copying animation segments when creating animations r=roc